[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4", features = ["canvas", "palette"] }
palette = "0.6"

[[bin]]
name = "gridworld_render"
path = "src/gridworld_render.rs"
